Time varying noise

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(smoothedstatesstdev)
 export(ssf)
 export(td)
 export(varloading)
+export(weightednoise)
 exportClasses(JD3_Object)
 exportClasses(JD3_ProcResults)
 exportClasses(JD3_Ssf)
